# Warped-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  migration_plan.md  poplar_patch.patch
.cache/clangd/index/: AABBTreeBuilder.cpp.6CFEAE22D8171234.idx  AABBTreeBuilder.h.395A59BB359530D6.idx  AABBTreeToBuffer.h.C7AA52A504639D86.idx  AABox.h.BF0CF12538EA7790.idx  AABox4.h.ECA744DE2CE426B2.idx  AABoxCast.h.DD0C94EC46D673A2.idx  ARMNeon.h.C4100DA6E981B207.idx  ActiveEdgeMode.h.B201D4B051475BEA.idx  ActiveEdges.h.6885BBAD9AA03009.idx  AllowedDOFs.h.AEAAAE57A8FE4E4F.idx  AngleConstraintPart.h.DC22D613DD45EB67.idx  Array.h.B9BDFF4C055404CB.idx  Atomics.h.4864516B25FE3256.idx  AxisConstraintPart.h.B597B4C12145A1B4.idx  BVec16.h.623239089893ADB1.idx  BVec16.inl.F30198ECBD23447D.idx  BackFaceMode.h.3B06DD479A9A4301.idx  BinaryHeap.h.20AC299CC0217D1E.idx  Body.cpp.1F5440D1FD81ED93.idx  Body.h.37B65D5C4BA09199.idx  Body.inl.48F9E7B03729BDA9.idx  BodyAccess.h.C726C21D84A3C1D6.idx  BodyActivationListener.h.1AFB64819230803C.idx  BodyCreationSettings.cpp.7FF4CCA958102A64.idx  BodyCreationSettings.h.2EB5C994651B4E99.idx  BodyFilter.h.2E9ACC4A146E4A94.idx  BodyID.h.E34386CDCA0C040A.idx  BodyInterface.cpp.BD6F2EC840CD8283.idx  BodyInterface.h.9D66C5655092819C.idx  BodyLock.h.E3049560D17FBCCD.idx  BodyLockInterface.h.5804214442B36326.idx  BodyLockMulti.h.91866AD662CB8308.idx  BodyManager.cpp.4DD03D2E116FAF29.idx  BodyManager.h.1AB875F988F23431.idx  BodyPair.h.FD84BBB75A4C7218.idx  BodyType.h.831C268EF392BD23.idx  BoxShape.cpp.096260160DB35AD7.idx  BoxShape.h.7B0FA1C558981D29.idx  BroadPhase.cpp.AC71E106BDE4C52A.idx  BroadPhase.h.DD3C088509D689BC.idx  (+420 more)
assets/maps/: test.map
build_mc/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
defs/: GameConfig.cfg  warped.fgd
docs/: TODO.md
maps/: light_test.map  test.map
src/: main.cpp  map_parser.cpp  map_parser.h  parameters.h  physics.cpp  player.cpp  player.h
src/compiler/: compile_map.cpp  lightmap.cpp  lightmap.h  lightmap_compute.cpp  lightmap_compute.h  lightmap_compute_metal.mm  lightmap_constants.h  lightmap_trace.cpp  lightmap_trace.h  map_brushes.cpp  map_brushes.h  map_csg.cpp  map_csg.h  map_entities.cpp  map_entities.h  map_entity_props.cpp  map_entity_props.h  map_geometry.cpp  map_geometry.h  map_lights.cpp  map_lights.h  map_parser.cpp  map_parser.h  map_polygons.cpp  map_polygons.h  map_render.cpp  map_render.h  map_tokenizer.cpp  map_tokenizer.h  sokol_compute_impl.c  structural_bsp.cpp  structural_bsp.h
src/compiler/shaders/: lightmap_bake.glsl
src/entities/: entities.cpp  entities.h
src/input/: input.cpp  input.h
src/math/: wmath.h
src/physx/: collision_data.cpp  collision_data.h  physics.cpp  physics.h
src/platform/: platform.h  sokol_impl.c
src/player/: player.cpp  player.h
src/render/: debug_draw.cpp  debug_draw.h  renderer.cpp  renderer.h  shaders.h
src/render/shaders/: map.glsl  normal.glsl  pencil.glsl
src/ui/: ui_menu.cpp  ui_menu.h
src/utils/: asset_pack.cpp  asset_pack.h  bsp_format.h  bsp_loader.cpp  bsp_loader.h  map_parser.cpp  map_parser.h  map_types.h  parameters.cpp  parameters.h
